Solving spacing bug in homepage css

--- a/src/app/pages/homepage/homepage.component.css
+++ b/src/app/pages/homepage/homepage.component.css
@@ -17,7 +17,5 @@
 }
 
 .homepage img {
-    margin-right: 5%;
+    margin-right: 1.7em;
 }
-
-/* andre.lucas.lemos */
